fix grid/list view alignment; not show grid/list view on news or research

--- a/app/assets/stylesheets/components/grid_list.scss
+++ b/app/assets/stylesheets/components/grid_list.scss
@@ -1,22 +1,26 @@
 @import "vars";
 
-.grid-list-view{
-  .grid-view, .list-view{
-    display: inline-block;
-    opacity: 0.7;
-    &:first-of-type{
-      margin-right: 0.579rem;
-    }
-    svg{
-      path{
-        fill: #979797;
+.list-switcher{
+  align-items: center;
+
+  .grid-list-view{
+    .grid-view, .list-view{
+      display: inline-block;
+      opacity: 0.7;
+      &:first-of-type{
+        margin-right: 0.579rem;
       }
-    }
-    &.active, &:hover{
-      opacity: 1.0;
       svg{
         path{
-          fill: $nav-start-active-color;
+          fill: #979797;
+        }
+      }
+      &.active, &:hover{
+        opacity: 1.0;
+        svg{
+          path{
+            fill: $nav-start-active-color;
+          }
         }
       }
     }
